--- a/public/styles.css
+++ b/public/styles.css
@@ -77,6 +77,7 @@ form.create-note {
   padding: 15px;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
+  transition: height 2s;
 }
 form.create-note input,
 form.create-note textarea {
