--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
-* {
+*, html {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
-}
-html {
   font-family: "Montserrat", sans-serif;
 }
+
 body {
   background: #eee;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
-  padding: 0 16px;
 }
 
 header {
